infrastructure/controllers/cilium/production/network-policies/cluster-wide-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "global-zero-trust-baseline"
spec:
  description: "Enforces a default-deny ingress/egress posture while permitting core cluster infrastructure communications."
  endpointSelector: {}

  ingress:
    # Keep the global ingress empty to allow pods to receive internal traffic,
    # then restrict it in the individual app policies.
  egress:
    - toEntities:
        - kube-apiserver
        - dns

    - toServices:
        - k8sService:
            serviceName: blocky
            namespace: blocky
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP # DNS is almost exclusively UDP
    - toServices:
        - k8sService:
            serviceName: traefik
            namespace: traefik
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
